# OpenSC

./: CMakeLists.md  CMakeLists.txt  Conversion.md  Makefile.md  config_copy.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/libopensc/: CMakeLists.txt
src/minidriver/: CMakeLists.txt
src/pkcs11/: CMakeLists.txt
src/pkcs15init/: CMakeLists.txt
src/scconf/: CMakeLists.txt  lex-parse.c  lex-parse.l  output.i
src/sm/: CMakeLists.txt
src/smm/: CMakeLists.txt
src/test/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  notify.h
win32/: App.config
